Bug fix for alpha blending with capture. Updated notebook example

--- a/PyGLer/pygler_test.ipynb
+++ b/PyGLer/pygler_test.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:d5df4710e6d5d453a6d10e7e417776daba3507c0adddf946b8d669ee907b2756"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -11,21 +12,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from pygler import PyGLer\n",
-      "from model import PyGLerModel\n",
-      "import numpy as np\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "viewer = PyGLer()\n",
-      "viewer.start()"
+      "import sys"
      ],
      "language": "python",
      "metadata": {},
@@ -36,8 +23,37 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "tri = PyGLerModel.LoadObj(\"triceratops.obj\")\n",
-      "viewer.addModel(tri)"
+      "sys.path.append(\"../../python_tests/PyCVCommons/src\")\n",
+      "sys.path.append(\"./src\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "\n",
+      "\n",
+      "from pygler.viewer import PyGLer\n",
+      "from pygler.model import PyGLerModel,Geometry\n",
+      "import numpy as np\n",
+      "import cv2\n",
+      "from cvcommons import image"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "viewer = PyGLer(useFBO=True)\n",
+      "viewer.start()"
      ],
      "language": "python",
      "metadata": {},
@@ -46,15 +62,58 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Time to run  ComputeNormals :  6.04510307312 ms\n",
-        "Vertices  (2832, 3)  Type:  float32\n",
-        "Faces  (5660, 3)  Type:  uint32\n",
-        "Normals  (2832, 3)  Type:  float32\n",
-        "NormalVertices dtype  float32\n"
+        "FBO initialized correctly.\n"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "tri = PyGLerModel.LoadObj(\"triceratops.obj\")\n",
+      "viewer.addModel(tri)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "depth,bgr = viewer.Convert2BGRD(viewer.capture())"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "k = image.show(\"depth\",depth,1)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "while k&255!=ord('q'):\n",
+      "    depth,bgr = viewer.Convert2BGRD(viewer.capture())\n",
+      "    k = image.show(\"depth\",depth,1)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
