Ipython notebook examples.

--- a/PyGLer/hand tracker.ipynb
+++ b/PyGLer/hand tracker.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2243479390f4ad435e41dfc7c61ca9334157d318ece375fb18da9e277eb45ca1"
+  "signature": "sha256:de554600e715f10e7cf71139fa44a685218dcdad7d2ff4691c0e592ae9bb6284"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -126,16 +126,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Reset View.\n",
-        "Reset View.\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 5
     },
     {
@@ -196,7 +187,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "handAxis.visible = False\n"
+      "handAxis.visible = False\n",
+      "viewer.redraw()\n"
      ],
      "language": "python",
      "metadata": {},
