Fix depth mask issue (invalid-depth is 0). Fix BGR color bug when loading e57 pointclouds

--- a/pygler_test.ipynb
+++ b/pygler_test.ipynb
@@ -8,9 +8,6 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"./src\")\n",
-    "\n",
     "from pygler.viewer import PyGLer\n",
     "from pygler.model import PyGLerModel,Geometry\n",
     "import numpy as np\n",
@@ -45,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "tri = PyGLerModel.LoadObj(\"triceratops.obj\",computeNormals=True)\n",
+    "tri = PyGLerModel.from_file(\"triceratops.obj\",computeNormals=True)\n",
     "viewer.addModel(tri)"
    ]
   },
